make add, delet, form

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -17,4 +17,23 @@ section {
 .example-button-row .mat-button-base {
   margin: 8px 20px 8px 0;
 }
+//////@at-root
+.like__conatiner-column{
+  width: 22vw;
+}
+.like__item{
+  height: 25px;
+  border-bottom: 3px solid gray;
+  padding-bottom: 10px;
+}
+
+.card__container{
+  max-width: 22vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 4px;
+  justify-content: space-between;
+}
+
 
