--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -3,7 +3,10 @@
     <form class="example-form">
       <mat-form-field class="example-full-width">
         <input (keyup)="onKey($event)" matInput placeholder="Filter" value="">
+        <button  mat-button *ngIf="value !null" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"><mat-icon>close</mat-icon></button>
+        
       </mat-form-field>
+      
     </form>
   </div>
   <div class="all-car-list__container">
@@ -15,5 +18,6 @@
     <div *ngIf="selectedCars.length>=8" class="example-button-row">
       <button  mat-raised-button color="accent" (click)="loadMore()">Load More</button>
     </div>
+    <div *ngIf="selectedCars.length===0">смичс тмьибть</div>
   </section>
 </div>
