--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -44,6 +44,14 @@
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
+     <!-- Row shown when there is no matching data. -->
+     <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="10">
+         This dealer does not exist 
+      </td>
+    </tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
