--- a/src/app/home/my-dealers/my-dealers.component.html
+++ b/src/app/home/my-dealers/my-dealers.component.html
@@ -2,7 +2,18 @@
   <div class="dealers__item">
     <h4>My Dealers</h4>
   </div>
-  <div class="dealers__text"><p>You havent added any dealrs yet</p></div>
+ 
+ <!-- <mat-selection-list #my-dealers [multiple]="false">
+    <mat-list-option >
+      <!-- <span class="model"><b>{{dealer.model}}</b></span>
+      <span class="brand">{{dealer.brand}}</span> -->
+    <!-- </mat-list-option>
+  </mat-selection-list> --> -->
+
+  <!-- <div *ngFor="let newDealer of newDealersList">
+
+  </div> -->
+  <div  class="dealers__text"><p>You havent added any dealrs yet</p></div>
 </div>
 
 
