--- a/src/app/shared-components/form/form.component.html
+++ b/src/app/shared-components/form/form.component.html
@@ -1,12 +1,13 @@
-<div class="form__container">
+<div class="form__container" novalidate>
   <h1 mat-dialog-title>
     <strong> {{action ? 'Edit' : 'Add'}} Dealers</strong>
   </h1>
   <div mat-dialog-content>
-    <form #dealersForm="ngForm">
+    <form #dealersForm="ngForm" class="ng-pristine ng-untouched ng-valid">
       <mat-form-field >
         <mat-label>Id </mat-label>
-        <input  [disabled]="action" name="id" type="text" matInput placeholder="Id" (keyup)="checkId()" [(ngModel)]="dealer.id" #id=ngModel required  >
+        <input  [disabled]="action"
+        [ngModelOptions]="{ standalone: true }" name="id" type="text" matInput placeholder="Id" (keyup)="checkId()" [(ngModel)]="dealer.id" #id=ngModel required  >
         <mat-error>
           <div  *ngIf="id.errors?.required">Id is required</div>
         </mat-error>
@@ -17,7 +18,7 @@
        
       <mat-form-field >
         <mat-label>Name </mat-label>
-        <input [disabled]="action" name="name" type="text" matInput placeholder="Name" [(ngModel)]="dealer.name" #name=ngModel required minlength="3"
+        <input  [ngModelOptions]="{ standalone: true }" [disabled]="action" name="name" type="text" matInput placeholder="Name" [(ngModel)]="dealer.name" #name=ngModel required minlength="3"
         maxlength="8">
         <mat-error>
        
@@ -29,21 +30,22 @@
   
       <mat-form-field >
         <mat-label>Headquarters</mat-label>
-        <input name="headquarters" matInput placeholder="Headquarters" [(ngModel)]="dealer.headquarters">
+        <input [ngModelOptions]="{ standalone: true }" name="headquarters" matInput placeholder="Headquarters" [(ngModel)]="dealer.headquarters">
       </mat-form-field>
       <mat-form-field >
         <mat-label>Country</mat-label>
-        <input name="country" matInput placeholder="Country" [(ngModel)]="dealer.country">
+        <input [ngModelOptions]="{ standalone: true }" name="country" matInput placeholder="Country" [(ngModel)]="dealer.country">
       </mat-form-field>
       <mat-form-field >
         <mat-label>Founded In</mat-label>
-        <input  name="foundedIn" matInput placeholder="Founded In" [(ngModel)]="dealer.foundedIn" >
+        <input [ngModelOptions]="{ standalone: true }" name="foundedIn" matInput placeholder="Founded In" [(ngModel)]="dealer.foundedIn" >
       </mat-form-field>
       </form>
   </div>
   <div mat-dialog-actions>
     <button mat-button class="cancel-btn" (click)="onClose()">Cancel</button>
-    <button mat-button [disabled]="!dealer.id || !dealer.name" (click)="onSave()">Save</button>
+    <button mat-button [disabled]="!dealer.id || !dealer.name || showError" (click)="onSeve()">Save</button>
+    
   </div>
     
   
