WIP: Show new dear at home component

--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -37,7 +37,7 @@
         <button mat-icon-button (click)="openPopUp(element)">
           <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
         </button>
-        <button (click)="delete(element)" mat-icon-button>
+        <button (click)="openDialog(elemt)" mat-icon-button>
           <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
         </button>
       </td>
