--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home__conatainer">
  <app-car-i-like></app-car-i-like>
  <app-mycars></app-mycars>
- <app-my-dealers></app-my-dealers>
+ <app-my-dealers [new-dealers]="newDealersList"></app-my-dealers>
  
   <section>
     <div class="example-button-row">
