--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -3,7 +3,7 @@
     <form class="example-form">
       <mat-form-field class="example-full-width">
         <input (keyup)="onKey($event)" matInput placeholder="Filter" value="">
-        <button  mat-button *ngIf="value !null" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"><mat-icon>close</mat-icon></button>
+        <button  mat-button *ngIf="value === null" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"><mat-icon>close</mat-icon></button>
         
       </mat-form-field>
       
