--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -1,12 +1,13 @@
 <div class="all-car-container">
   <div class="all-car__items">
     <form class="example-form">
-      <mat-form-field class="example-full-width">
-        <input (keyup)="onKey($event)" matInput placeholder="Filter" value="">
-        <button  mat-button *ngIf="value === null" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"><mat-icon>close</mat-icon></button>
-        
-      </mat-form-field>
-      
+      <mat-form-field class="example-form-field">
+        <mat-label></mat-label>
+        <input (keyup)="onKey($event)" matInput placeholder="Filter" type="text" [(ngModel)]="value" name="filter">
+        <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="" (click)="value=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field> 
     </form>
   </div>
   <div class="all-car-list__container">
