--- a/src/app/home/my-cars/mycars.component.html
+++ b/src/app/home/my-cars/mycars.component.html
@@ -2,6 +2,7 @@
   <div class="mycar__item">
     <h4>My cars</h4>
   </div>
-  <div class="mycar__text"><p>You havent added any cars yet</p></div>
+  <div class="mycar__text">
+    <p>You havent added any cars yet</p>
+  </div>
 </div>
-
