--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -1,17 +1,10 @@
 <div class="container__input">
-  <!-- <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field> -->
-
   <mat-form-field class="example-form-field">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input [(ngModel)]="value" name="filter">
-    <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="" (click)="value=''">
+    <input matInput (keyup)="applyFilter($event)" [(ngModel)]="valueFilter" name="valueFilter">
+    <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field> 
-
   <section>
     <div class="example-button-row">
       <button mat-raised-button color="primary" (click)="openPopUp()">Add dealers</button>
@@ -46,7 +39,7 @@
         <button mat-icon-button (click)="openPopUp(element)">
           <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
         </button>
-        <button (click)="openDialog(elemt)" mat-icon-button>
+        <button (click)="delete(element)" mat-icon-button>
           <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
         </button>
       </td>
@@ -55,12 +48,14 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 
-     <!-- Row shown when there is no matching data. -->
-     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="10">
-         This dealer does not exist 
-      </td>
-    </tr>
+<ng-container>
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="10">
+       Dealer  not found.
+    </td>
+  </tr>
+</ng-container>
+     
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
