--- a/src/app/home/my-dealers/my-dealers.component.html
+++ b/src/app/home/my-dealers/my-dealers.component.html
@@ -2,16 +2,12 @@
   <div class="dealers__item">
     <h4>My Dealers</h4>
   </div>
- 
-<mat-selection-list [multiple]="false">
+  <mat-selection-list [multiple]="false">
     <mat-list-option *ngFor="let dealer of newDealers">
       <span class="model"><b>{{dealer.id}}</b></span>
-      <span class="brand">{{dealer.name}}</span> 
-      <div *ngIf="dealer.length === 0"  class="dealers__text"><p>You havent added any dealrs yet</p></div>
-
+      <span class="brand">{{dealer.name}}</span>
+      <div *ngIf="dealer.length === 0" class="dealers__text">
+        <p>You havent added any dealrs yet</p>
+      </div>
     </mat-list-option>
-  </mat-selection-list>  
-
-  
-
-
+  </mat-selection-list>
