--- a/src/app/shared-components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared-components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,7 +1,6 @@
-<div mat-dialog-content>
-  {{message}}
- </div>
- <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No</button>
-   <button  mat-button cdkFocusInitial  (click)="confirmDeletion()">Yes</button>
- </div>
+<h1 mat-dialog-title>{{ data.title }}</h1>
+<div mat-dialog-content>{{ data.message }}</div>
+<div class="button-div">
+  <button mat-raised-button color="primary" [mat-dialog-close]="true">Confirm</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="false">Cancel</button>
+</div>
