--- a/src/app/shared-components/form/form.component.html
+++ b/src/app/shared-components/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="form__container" novalidate>
+<div class="form__container" >
   <h1 mat-dialog-title>
     <strong> {{action ? 'Edit' : 'Add'}} Dealers</strong>
   </h1>
@@ -6,8 +6,7 @@
     <form #dealersForm="ngForm" class="ng-pristine ng-untouched ng-valid">
       <mat-form-field >
         <mat-label>Id </mat-label>
-        <input  [disabled]="action"
-        [ngModelOptions]="{ standalone: true }" name="id" type="text" matInput placeholder="Id" (keyup)="checkId()" [(ngModel)]="dealer.id" #id=ngModel required  >
+        <input  [disabled]="action" [ngModelOptions]="{ standalone: true }" name="id" type="text" matInput placeholder="Id" (keyup)="checkId()" [(ngModel)]="dealer.id" #id=ngModel required  >
         <mat-error>
           <div  *ngIf="id.errors?.required">Id is required</div>
         </mat-error>
@@ -15,19 +14,15 @@
           <div>This id already exist, plese enter new id </div>
         </mat-hint>
       </mat-form-field>
-       
       <mat-form-field >
         <mat-label>Name </mat-label>
         <input  [ngModelOptions]="{ standalone: true }" [disabled]="action" name="name" type="text" matInput placeholder="Name" [(ngModel)]="dealer.name" #name=ngModel required minlength="3"
         maxlength="8">
         <mat-error>
-       
           <div  *ngIf="name.errors?.required">Name is required</div>
           <div *ngIf="name.errors?.minlength">Name must be at least 3 characters long</div>
         </mat-error>
-
       </mat-form-field>
-  
       <mat-form-field >
         <mat-label>Headquarters</mat-label>
         <input [ngModelOptions]="{ standalone: true }" name="headquarters" matInput placeholder="Headquarters" [(ngModel)]="dealer.headquarters">
@@ -44,10 +39,7 @@
   </div>
   <div mat-dialog-actions>
     <button mat-button class="cancel-btn" (click)="onClose()">Cancel</button>
-    <button mat-button [disabled]="!dealer.id || !dealer.name || showError" (click)="onSeve()">Save</button>
-    
+    <button mat-button [disabled]="!dealer.id || !dealer.name || showError" (click)="onSeve()">Save</button> 
   </div>
-    
-  
 </div>
 
