--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -2,7 +2,7 @@
   <div class="all-car__items">
     <form class="example-form">
       <mat-form-field class="example-form-field">
-        <mat-label></mat-label>
+        <mat-label>Filter</mat-label>
         <input (keyup)="onKey($event)" matInput placeholder="Filter" type="text" [(ngModel)]="valueFilter" name="filter">
         <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
           <mat-icon>close</mat-icon>
