--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -1,5 +1,6 @@
 <div class="container__input">
   <mat-form-field class="example-form-field">
+    <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" [(ngModel)]="valueFilter" name="valueFilter">
     <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
       <mat-icon>close</mat-icon>
