--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -1,7 +1,8 @@
-<div class="all-car-container">
+<div class="all-car__container">
+  <mat-spinner *ngIf="isDataLoading" class="loading"></mat-spinner>
   <div class="all-car__items">
     <form class="example-form">
-      <mat-form-field class="example-form-field">
+      <mat-form-field class="example-form-field" *ngIf="!isDataLoading">
         <mat-label>Filter</mat-label>
         <input (keyup)="onKey($event)" matInput placeholder="Filter" type="text" [(ngModel)]="valueFilter" name="filter">
         <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
@@ -10,12 +11,12 @@
       </mat-form-field> 
     </form>
   </div>
-  <div class="all-car-list__container">
+  <div class="all-car__list-container"  *ngIf="!isDataLoading">
     <div *ngFor="let carItem of selectedCars">
       <app-sm-card-car [car-item]="carItem" [card-type]="'lg'"></app-sm-card-car>
     </div>
   </div> 
-  <section>
+  <section *ngIf="!isDataLoading">
     <div *ngIf="selectedCars.length>=8" class="example-button-row">
       <button  mat-raised-button color="accent" (click)="loadMore()">Load More</button>
     </div>
