--- a/src/app/cars/all-cars/all-cars.component.scss
+++ b/src/app/cars/all-cars/all-cars.component.scss
@@ -1,5 +1,4 @@
-
-.all-car-container{
+.all-car__container{
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -15,8 +14,7 @@
   padding-left: 40px;
   padding-right:40px;
 }
-
-.all-car-list__container{
+.all-car__list-container{
   width: 75vw;
   display: flex;
   flex-direction: row;
@@ -41,5 +39,7 @@
   width: 100%;
 }
 
-
+.loading {
+  margin-top: 200px;
+}
 
