--- a/src/app/dealers/table/table.component.scss
+++ b/src/app/dealers/table/table.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
 }
 .mat-form-field{
   width: 200px;
@@ -24,5 +25,9 @@ width: 15%;
 }
 table {
   width: 100%;
+}
+.loading{
+margin-top: 200px;
+margin-left: 500px;
 }
 
