WIP: make post new dealers in InMemoryDB

--- a/src/app/home/my-dealers/my-dealers.component.html
+++ b/src/app/home/my-dealers/my-dealers.component.html
@@ -4,8 +4,12 @@
   </div>
   <mat-selection-list [multiple]="false">
     <mat-list-option *ngFor="let dealer of newDealers">
-      <span class="model"><b>{{dealer.id}}</b></span>
-      <span class="brand">{{dealer.name}}</span>
+      <span class="name"><b>{{dealer.name}}</b></span>
+      <div class="info">
+        <span class="country">{{dealer.country}}</span>
+        <span class="registration">{{dealer.registration | date:'d/M/YYYY' }}</span>
+      </div>
+      
       <div *ngIf="dealer.length === 0" class="dealers__text">
         <p>You havent added any dealrs yet</p>
       </div>
