WIP: delet icon when sm card

--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -71,9 +71,7 @@ section {
   font-size: 14px;
 }
 .icon-sm{
-  color: red;
-  margin-top: -12px;
-  
+  visibility: hidden; 
 }
 .icon-lg{
   color: red;
