WIP: make width and hight in card and change title

--- a/src/app/home/car-i-like/car-i-like.component.html
+++ b/src/app/home/car-i-like/car-i-like.component.html
@@ -3,8 +3,8 @@
     <h4>Car I Like</h4>
   </div>
 </div>
-
-<div class="card__container">
+<mat-spinner *ngIf="isDataLoading" class="loading"></mat-spinner>
+<div class="card__container" *ngIf="!isDataLoading">
     <div *ngFor="let carItem of carItems">
       <app-sm-card-car [car-item]="carItem"></app-sm-card-car>
     </div>
