--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -1,4 +1,4 @@
-<mat-card [ngClass]="{'sizezzzzzzzzzzzz-lg': isCardLg, 'size-sm': !isCardLg}">
+<mat-card [ngClass]="{'size-lg': isCardLg, 'sizes-sm': !isCardLg}">
   <mat-card-header>
     <mat-card-title [ngClass]="{'title-lg': isCardLg, 'title-sm': !isCardLg}">{{carItem .model}}</mat-card-title>
     <mat-card-subtitle [ngClass]="{'subtitle-lg': isCardLg, 'subtitle-sm': !isCardLg}">{{carItem .brand}}</mat-card-subtitle>
