--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -45,13 +45,14 @@ section {
 .btn-details{
   color: purple;
 }
-.size-sm{
-  width: 105px;
+.sizes-sm{
+  width: 90px;
   margin-bottom: 5px;
 }
 
-.sizezzzzzzzzzzzz-lg{
+.size-lg{
   width: 170px;
+  height: 200px;
 }
 .title-sm{
   font-size: 11px;
@@ -64,14 +65,14 @@ section {
   margin-top: -5px;
 }
 .title-lg{
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 12px;
 }
 .subtitle-lg{
-  font-size: 14px;
+  font-size: 12px;
 }
 .icon-sm{
-  visibility: hidden; 
+  visibility: hidden;
 }
 .icon-lg{
   color: red;
