WIP:make sm-card width form subtitle

--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -48,6 +48,7 @@ section {
 .sizes-sm{
   width: 90px;
   margin-bottom: 5px;
+  height: 90px;
 }
 
 .size-lg{
@@ -63,6 +64,7 @@ section {
   font-size: 10px;
   margin-bottom: 5px;
   margin-top: -5px;
+  width: 80px;
 }
 .title-lg{
   font-size: 14px;
