WIP: delete sort in button in table

--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -36,7 +36,7 @@
       <td mat-cell *matCellDef="let element"> {{element.foundedIn}} </td>
     </ng-container>
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+      <th mat-header-cell *matHeaderCellDef > </th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button (click)="openPopUp(element)">
           <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
