--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -4,8 +4,8 @@
     <form class="example-form">
       <mat-form-field class="example-form-field" *ngIf="!isDataLoading">
         <mat-label>Filter</mat-label>
-        <input (keyup)="onKey($event)" matInput placeholder="Filter" type="text" [(ngModel)]="valueFilter" name="filter">
-        <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
+        <input  (keyup)="onKey($event)" matInput placeholder="Filter" type="text" [(ngModel)]="valueFilter" name="filter">
+        <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="resetFilter()">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field> 
@@ -18,7 +18,7 @@
   </div> 
   <section *ngIf="!isDataLoading">
     <div *ngIf="selectedCars.length>=8 && selectedCars.length !== carListItems.length" class="example-button-row">
-      <button  mat-raised-button color="accent" (click)="loadMore()">Load More</button>
+      <button mat-raised-button color="accent" (click)="loadMore()">Load More</button>
     </div>
     <div *ngIf="selectedCars.length===0"> Car not found.</div>
   </section>
