--- a/src/app/cars/by-category-cars/by-category-cars.component.scss
+++ b/src/app/cars/by-category-cars/by-category-cars.component.scss
@@ -1,48 +1,3 @@
-.car-cotainer{
-  width: 100vw;
-  height: 1000px;
-}
-.mat-tab-group{
-  width: 1270px;
-  height: 100% !important;
-}
-.mat-selection-list{
-  width: 300px; 
-  height: 100vh;
-}
-.category__conatainer{
-  width: 100vw;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 15px;
-}
-.container__info{
-  display: flex;
-  width: 60vw;
-  position: absolute;
-  top: 0vw;
-  right: 5vw;
-  display: flex;
-  flex-direction: row; 
-}
-.car__img{
-  width: 500px;
-  height: 250px;
-  margin-top: 10px;
-  margin-right: 20px;
-}
-img{
-  width: 500px;
-  height: 250px;
-}
-.detail__info{
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  width: 150px;
-}
 .loading{
   width: 1200px;
   height: 1200px;
@@ -50,3 +5,50 @@ img{
   margin-left: 500px;
   padding-top: 500px;
 }
+.car-container{
+  width: 100vw;
+  height: 1000px;
+  .category__conatainer{
+    width: 100vw;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    .mat-tab-group{
+      width: 1270px;
+      height: 100% !important;
+    }
+    .mat-selection-list{
+      width: 300px; 
+      height: 100vh;
+    }
+    .container__info{
+      display: flex;
+      width: 60vw;
+      position: absolute;
+      top: 0vw;
+      right: 5vw;
+      display: flex;
+      flex-direction: row; 
+      .car__img{
+        width: 500px;
+        height: 250px;
+        margin-top: 10px;
+        margin-right: 20px;
+        img{
+          width: 500px;
+          height: 250px;
+        }
+      }
+      .detail__info{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+        width: 150px;
+      }
+    }
+  }
+}
+
+
