--- a/src/app/shared-components/car-form/car-form.component.html
+++ b/src/app/shared-components/car-form/car-form.component.html
@@ -1,4 +1,65 @@
 <div class="car-form-container">
+  <h1 mat-dialog-title>
+     <strong>{{action ? '' : 'Add Cars'}}</strong>
+  </h1>
+   <div class="mat-dialog-content">
+     <form [formGroup]="myForm">
+        <mat-form-field>
+          <mat-label>Model</mat-label>
+          <input matInput type="text" formControlName="model">
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Dealer</mat-label>
+          <input matInput type="text" formControlName="dealer">
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Class</mat-label>
+          <input matInput type="text" formControlName="class">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Year</mat-label>
+          <input matInput type="text" formControlName="year">
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Color</mat-label>
+          <input matInput type="text" formControlName="color">
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Site</mat-label>
+          <input matInput type="text" formControlName="wikilink">
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Description</mat-label>
+          <textarea matInput formControlName="description"></textarea>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Image</mat-label>
+          <div>
+            <mat-toolbar>
+              <!-- Display files names -->
+              <input matInput readonly  formControlName="image"/>
+        
+              <!-- Browse Button -->
+              <button mat-flat-button color="primary">
+                Browse File
+              </button>
+            </mat-toolbar>
+        
+            <!-- Fetch selected filed on change -->
+            <input type="file" #fileInput id="uploadFile" (change)="uploadFileEvt($event)" name="uploadFile" multiple="multiple"
+              accept="image/*" />
+          </div>
+        </mat-form-field>
+
+        
+     </form>
+   </div>
+
   <div mat-dialog-actions>
     <button mat-button class="cancel-btn" (click)="onClose()">Cancel</button>
     <button mat-button  (click)="onSeve()">Save</button> 
