WIP: make routing in id

--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -8,7 +8,8 @@
   <img [ngClass]="{'img-lg': isCardLg, 'img-sm': !isCardLg}"  *ngIf="!carItem.image"mat-card-image src="../../../assets/images/defoult.jpg" alt="{{carItem.brand}}">
   <div *ngIf="isCardLg">
     <button  (click)="like()" class="btn-like" mat-button>Like</button>
-    <button class="btn-details" mat-button>Details</button> 
+   <a [routerLink]="['/cars', carItem.id]"> <button class="btn-details" mat-button  >
+    Details</button> </a> 
   </div>
 </mat-card>
 
