--- a/src/app/shared-components/car-form/car-form.component.html
+++ b/src/app/shared-components/car-form/car-form.component.html
@@ -11,7 +11,11 @@
 
         <mat-form-field>
           <mat-label>Dealer</mat-label>
-          <input matInput type="text" formControlName="dealer">
+          <!-- <input matInput type="text" formControlName="dealer"> -->
+          <mat-select matInput type="text" formControlName="dealer">
+            <mat-option value="one">First option</mat-option>
+            <mat-option value="two">Second option</mat-option>
+          </mat-select>
         </mat-form-field>
 
         <mat-form-field>
