--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -1,2 +1,26 @@
-<p>details-car works!</p>
-{{car?.id}}
+
+<div class="details__container">
+ 
+  <div class="car__img" >
+    <img [src]="car?.image" [alt]="car?.id">
+    <img *ngIf="car?.image == undefined" src="../../../assets/images/defoult.jpg" [alt]="car?.id">
+  </div>
+
+  <div class="car__info">
+    <ul>
+      <li><h3>{{car?.model}}</h3></li>
+      <li>Dealers: <b>{{car?.brand}}</b></li>
+      <li>Class: <b>{{car?.class |titlecase}}</b></li>
+      <li>Year: <b>{{car?.year}}</b></li>
+      <li>Color: <b>{{car?.color}}</b></li>
+      <li class="car__site">Site: <b>{{car?.wikilink}}</b></li>
+      <li class="car__description">{{car?.description}}</li>
+    </ul>
+  </div>
+  <button mat-icon-button >
+    <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+  </button>
+  <button  mat-icon-button>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="delete()" >delete</mat-icon>
+  </button>
+</div>
