--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -84,9 +84,11 @@ section {
   width: calc(100% + 32px);
 	margin: 0 -16px 16px -16px;
 	max-height: 60px; 
+  object-fit: cover;
 }
 .img-lg{
   width: calc(100% + 32px);
 	margin: 0 -16px 16px -16px;
 	max-height: 100px; 
+  object-fit: cover;
 }
