--- a/src/app/shared-components/details-car/details-car.component.scss
+++ b/src/app/shared-components/details-car/details-car.component.scss
@@ -11,15 +11,20 @@ line-height: 2;
 
 .car__img{
   width: 600px;
+  height: 400px;
   padding-top: 20px;
+ 
 }
 img{
   width: 600px;
+  height: 400px;
   object-fit: cover; 
 }
 
 .car__description{
-  padding: 10px;
+  padding: 5px;
   border: 1px solid black;
-  
+  width: 400px;
+  height: 215px;
+  overflow: hidden;
 }
