--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -14,7 +14,7 @@
       <li>Class: <b>{{car?.class |titlecase}}</b></li>
       <li>Year: <b>{{car?.year}}</b></li>
       <li>Color: <b>{{car?.color}}</b></li>
-      <li class="car__site">Site: <b>{{car?.wikilink}}</b></li>
+      <li class="car__site">Site: <b><a href="{{car?.wikilink}}" target="blank">{{car?.wikilink}}</a></b></li>
       <li class="car__description">{{car?.description}}</li>
     </ul>
   </div>
@@ -22,6 +22,6 @@
     <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
   </button>
   <button  mat-icon-button>
-    <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="delete()" >delete</mat-icon>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="delete(car)" >delete</mat-icon>
   </button>
 </div>
