WIP: make loading in datails component

--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -1,5 +1,5 @@
-
-<div class="details__container">
+<mat-spinner *ngIf="isDataLoading" class="loading"></mat-spinner>
+<div class="details__container" *ngIf="!isDataLoading">
  
   <div class="car__img" >
     <img [src]="car?.image" [alt]="car?.id">
