WIP: make cars in home

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home__conatainer">
   <app-car-i-like></app-car-i-like>
-  <app-mycars></app-mycars>
+  <app-mycars [new-cars]="newCarList"></app-mycars>
   <app-my-dealers [new-dealers]="newDealersList"></app-my-dealers>
   <section>
     <div class="example-button-row">
