--- a/src/app/home/my-cars/mycars.component.scss
+++ b/src/app/home/my-cars/mycars.component.scss
@@ -6,8 +6,12 @@
     border-bottom: 3px solid gray;
     padding-bottom: 10px;
   }
-  .mycar__text{
-    margin-top: 15px;
+  .info{
+    display: flex;
+    justify-content: space-between;
+  }
+  .cars__text{
+    margin-top: 5px;
     font-size: 12px;
    }
 }
