--- a/src/app/home/car-i-like/car-i-like.component.html
+++ b/src/app/home/car-i-like/car-i-like.component.html
@@ -6,6 +6,6 @@
 <mat-spinner *ngIf="isDataLoading" class="loading"></mat-spinner>
 <div class="card__container" *ngIf="!isDataLoading">
     <div *ngFor="let carItem of carItems">
-      <app-sm-card-car [car-item]="carItem"></app-sm-card-car>
+      <app-sm-card-car [car-item]="carItem" [brand]="getBrandName(carItem.brand)" ></app-sm-card-car>
     </div>
 </div> 
