--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -18,7 +18,7 @@
       <li class="car__description">{{car?.description}}</li>
     </ul>
   </div>
-  <button mat-icon-button >
+  <button mat-icon-button (click)="onEdit()">
     <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
   </button>
   <button  mat-icon-button>
