--- a/src/app/shared-components/edit-car/edit-car.component.scss
+++ b/src/app/shared-components/edit-car/edit-car.component.scss
@@ -32,3 +32,45 @@ img{
   margin-top: 200px;
   margin-left: 500px;
 }
+.image{
+  visibility: hidden;
+}
+.car__info{
+  width: 500px;
+  margin-left: 20px;
+}
+
+.mat-form-field{
+  width: 350px;
+  
+}
+.mat-hint{
+  color: red;
+}
+.mat-dialog-actions{
+  display: flex;
+  justify-content: flex-end;
+}
+.mat-toolbar-single-row {
+  height: auto !important;
+  background: transparent;
+}
+
+.mat-toolbar-single-row button {
+  width: 200px;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+#uploadFile {
+  top: 0px;
+  left: 0px;
+  width: 100%;    
+  z-index: 9;
+  opacity: 0;
+  height: 100%;
+  cursor: pointer;
+  position: absolute;
+}
