--- a/src/app/shared-components/car-form/car-form.component.scss
+++ b/src/app/shared-components/car-form/car-form.component.scss
@@ -1,35 +1,32 @@
+.car-form-container{
+  .mat-form-field{
+    width: 350px; 
+    .mat-hint{
+      color: red;
+    }
+  }
+  .mat-dialog-actions{
+    display: flex;
+    justify-content: flex-end;
+  }
+  .mat-toolbar-single-row {
+    height: auto !important;
+    background: transparent;
+  }
+  .mat-toolbar-single-row button {
+    width: 200px;
+  }
+  #uploadFile {
+    top: 0px;
+    left: 0px;
+    width: 100%;    
+    z-index: 9;
+    opacity: 0;
+    height: 100%;
+    cursor: pointer;
+    position: absolute;
+  }
+}
 
-.mat-form-field{
-  width: 350px;
-  
-}
-.mat-hint{
-  color: red;
-}
-.mat-dialog-actions{
-  display: flex;
-  justify-content: flex-end;
-}
-.mat-toolbar-single-row {
-  height: auto !important;
-  background: transparent;
-}
 
-.mat-toolbar-single-row button {
-  width: 200px;
-}
 
-.mat-form-field {
-  width: 100%;
-}
-
-#uploadFile {
-  top: 0px;
-  left: 0px;
-  width: 100%;    
-  z-index: 9;
-  opacity: 0;
-  height: 100%;
-  cursor: pointer;
-  position: absolute;
-}
