--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -21,7 +21,10 @@
   <button mat-icon-button (click)="onEdit()">
     <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
   </button>
-  <button  mat-icon-button>
-    <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="delete(car)" >delete</mat-icon>
+  <button  mat-icon-button (click)="delete(car)">
+    <mat-icon aria-hidden="false" aria-label="Example home icon"  >delete</mat-icon>
+  </button>
+  <button  mat-icon-button (click)="goBack()">
+    <mat-icon aria-hidden="false" aria-label="Example home icon"  >replay</mat-icon>
   </button>
 </div>
