--- a/src/app/shared-components/edit-car/edit-car.component.scss
+++ b/src/app/shared-components/edit-car/edit-car.component.scss
@@ -1,76 +1,62 @@
-.details__container{
-  display: flex;
-  justify-content: space-between;
-  padding: 40px;
-}
 
-li{
-list-style: none;
-line-height: 2;
-}
-
-.car__img{
-  width: 600px;
-  height: 400px;
-  padding-top: 20px;
- 
-}
-img{
-  width: 600px;
-  height: 400px;
-  object-fit: cover; 
-}
-
-.car__description{
-  padding: 5px;
-  border: 1px solid black;
-  width: 400px;
-  height: 215px;
-  overflow: hidden;
-}
 .loading {
   margin-top: 200px;
   margin-left: 500px;
 }
+.details__container{
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+  .car__img{
+    width: 600px;
+    height: 400px;
+    padding-top: 20px;
+    img{
+      width: 600px;
+      height: 400px;
+      object-fit: cover; 
+    }
+  }
+  .car__info{
+    width: 350px;
+    margin-left: 20px;
+    .mat-form-field{
+      width: 350px;
+      .mat-hint{
+        color: red;
+      }
+      
+    }
+    .mat-dialog-actions{
+      display: flex;
+      justify-content: flex-end;
+    }
+    
+  }
+}
+
+
+
 .image{
   visibility: hidden;
 }
-.car__info{
-  width: 500px;
-  margin-left: 20px;
-}
 
-.mat-form-field{
-  width: 350px;
-  
-}
-.mat-hint{
-  color: red;
-}
-.mat-dialog-actions{
-  display: flex;
-  justify-content: flex-end;
-}
-.mat-toolbar-single-row {
-  height: auto !important;
-  background: transparent;
-}
+// .mat-toolbar-single-row {
+//   height: auto !important;
+//   background: transparent;
+// }
 
-.mat-toolbar-single-row button {
-  width: 200px;
-}
+// .mat-toolbar-single-row button {
+//   width: 200px;
+// }
 
-.mat-form-field {
-  width: 100%;
-}
-
-#uploadFile {
-  top: 0px;
-  left: 0px;
-  width: 100%;    
-  z-index: 9;
-  opacity: 0;
-  height: 100%;
-  cursor: pointer;
-  position: absolute;
-}
+// #uploadFile {
+//   top: 0px;
+//   left: 0px;
+//   width: 100%;    
+//   z-index: 9;
+//   opacity: 0;
+//   height: 100%;
+//   cursor: pointer;
+//   position: absolute;
+// }
