WIP: show form like reuseable component

--- a/src/app/shared-components/details-car/details-car.component.scss
+++ b/src/app/shared-components/details-car/details-car.component.scss
@@ -30,12 +30,16 @@
       overflow: hidden;
     }
   } 
-  .edit__controls{
+  
+  .car__controls{
     width: 200px;
   }
+  
 }
 
-
+.image{
+  visibility: hidden;
+}
 
 
 
