WIP: craeate separate dialog

--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -30,8 +30,8 @@
     </button>
   </div>
 
-  <section *ngIf="isEdit">
-    <app-car-form></app-car-form>
+  <section>
+    <app-car-form  *ngIf="isEdit" [carItem] ="car"></app-car-form>
     <!-- vs jhnbfjkmyui -->
   </section>
  
