--- a/src/app/shared-components/car-form/car-form.component.scss
+++ b/src/app/shared-components/car-form/car-form.component.scss
@@ -1,4 +1,6 @@
-.car-form-container{
+form{
+  width: 350px;
+  max-height: 670px;
   .mat-dialog-content{
     max-height: 80vh;
   }
@@ -10,26 +12,8 @@
   }
   .mat-dialog-actions{
     display: flex;
-    justify-content: flex-end;
-  }
-  .mat-toolbar-single-row {
-    height: auto !important;
-    background: transparent;
-  }
-  .mat-toolbar-single-row button {
-    width: 200px;
-  }
-  #uploadFile {
-    top: 0px;
-    left: 0px;
-    width: 100%;    
-    z-index: 9;
-    opacity: 0;
-    height: 100%;
-    cursor: pointer;
-    position: absolute;
+   justify-content: flex-end;
   }
 }
-
 
 
