--- a/src/app/shared-components/dialog-car-form/dialog-car-form.component.html
+++ b/src/app/shared-components/dialog-car-form/dialog-car-form.component.html
@@ -4,7 +4,7 @@
       <strong> Add Cars</strong>
     </h1>
     <div class="mat-dialog-content">
-      <app-car-form ></app-car-form>
+      <app-car-form [carItem] ="cars" (formData) ="formData($event)"></app-car-form>
     </div>
   
     
