--- a/src/app/shared-components/car-form/car-form.component.scss
+++ b/src/app/shared-components/car-form/car-form.component.scss
@@ -1,6 +1,8 @@
 form{
+  margin: 20px;
   width: 350px;
-  max-height: 670px;
+  height: 700px;
+  max-height: 770px;
   .mat-dialog-content{
     max-height: 80vh;
   }
