--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -24,7 +24,7 @@
     <button  mat-icon-button (click)="delete(car)">
       <mat-icon aria-hidden="false" aria-label="Example home icon"  >delete</mat-icon>
     </button>
-    <button  mat-icon-button (click)="goBack()">
+    <button  mat-icon-button (click)="changePage()">
       <mat-icon aria-hidden="false" aria-label="Example home icon"  >replay</mat-icon>
     </button>
   </div>
