--- a/src/app/home/my-dealers/my-dealers.component.html
+++ b/src/app/home/my-dealers/my-dealers.component.html
@@ -2,8 +2,8 @@
   <div class="dealers__item">
     <h4>My Dealers</h4>
   </div>
-
-  <mat-selection-list [multiple]="false">
+  <mat-spinner *ngIf="isLoadingDealer" class="loading"></mat-spinner>
+  <mat-selection-list [multiple]="false"  *ngIf="!isLoadingDealer">
     <mat-list-option *ngFor="let dealer of newDealers">
       <span class="name"><b>{{dealer.name}}</b></span>
       <div class="info">
@@ -13,6 +13,6 @@
     </mat-list-option>
   </mat-selection-list>
 
-  <div *ngIf="newDealers.length === 0" class="dealers__text">
+  <div *ngIf="newDealers.length === 0 && !isLoadingDealer" class="dealers__text">
     You havent added any dealrs yet
   </div>
