--- a/src/app/shared-components/car-form/car-form.component.html
+++ b/src/app/shared-components/car-form/car-form.component.html
@@ -63,7 +63,7 @@
       </div>
     </mat-form-field>
     <div mat-dialog-actions>
-      <button mat-button class="cancel-btn" (click)="onClose()">Cancel</button>
+      <button mat-button class="cancel-btn" (click)="cancelCar.emit()">Cancel</button>
       <button mat-button [disabled]="showError || myForm.invalid" (click)="onSave()">Save</button>
     </div>
   </form>
