--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -8,9 +8,9 @@
 
   <div class="car__info"*ngIf="!isEdit">
     <ul>
-      <li><h4>{{car.model}}</h4> </li>
+      <li ><h4>{{car.model}}</h4> </li>
       <li>Dealers: <b>{{car.brand}}</b></li>
-      <li>Class: <b>{{car?.class |titlecase}}</b></li>
+      <li >Class: <b>{{car?.class |titlecase}}</b></li>
       <li>Year: <b>{{car?.year}}</b></li>
       <li>Color: <b>{{car?.color}}</b></li>
       <li class="car__site">Site: <b><a href="{{car?.wikilink}}" target="blank">{{car?.wikilink}}</a></b></li>
@@ -22,15 +22,18 @@
       <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
     </button>
     <button  mat-icon-button (click)="delete(car)">
-      <mat-icon aria-hidden="false" aria-label="Example home icon"  >delete</mat-icon>
+      <mat-icon aria-hidden="false" aria-label="Example home icon" >delete</mat-icon>
     </button>
     <button  mat-icon-button (click)="changePage()">
-      <mat-icon aria-hidden="false" aria-label="Example home icon"  >replay</mat-icon>
+      <mat-icon aria-hidden="false" aria-label="Example home icon" >replay</mat-icon>
     </button>
   </div>
 
   <section *ngIf="isEdit">
-    <app-car-form   [carItem] ="car" (formData)="formData($event)"></app-car-form>
+    <app-car-form   [carItem] ="car" 
+    (saveCarData)="saveCarData($event)"
+    (cancelCar)="onClose()">
+  </app-car-form>
   </section>
  
   
