--- a/src/app/shared-components/details-car/details-car.component.html
+++ b/src/app/shared-components/details-car/details-car.component.html
@@ -3,18 +3,23 @@
  
   <div class="car__img" >
     <img [src]="car?.image" [alt]="car?.id">
-    <img *ngIf="car?.image == undefined" src="../../../assets/images/defoult.jpg" [alt]="car?.id">
+    <img *ngIf="car?.image == undefined" src="../../../assets/images/defoult.jpg" >
   </div>
 
   <div class="car__info"*ngIf="!isEdit">
     <ul>
-      <li ><h4>{{car.model}}</h4> </li>
+      <li ><h4>{{car?.model}}</h4> </li>
       <li>Dealers: <b>{{car.brand}}</b></li>
-      <li >Class: <b>{{car?.class |titlecase}}</b></li>
-      <li>Year: <b>{{car?.year}}</b></li>
-      <li>Color: <b>{{car?.color}}</b></li>
-      <li class="car__site">Site: <b><a href="{{car?.wikilink}}" target="blank">{{car?.wikilink}}</a></b></li>
-      <li class="car__description">{{car?.description}}</li>
+      <li *ngIf="car?.class">Class: <b>{{car?.class |titlecase}}</b></li>
+      <li *ngIf="!car?.class"></li>
+      <li *ngIf="car?.year">Year: <b>{{car?.year}}</b></li>
+      <li *ngIf="!car?.year"></li>
+      <li *ngIf="car?.color">Color: <b>{{car?.color}}</b></li>
+      <li *ngIf="!car?.color"></li>
+      <li *ngIf="car?.wikilink" class="car__site">Site: <b><a href="{{car?.wikilink}}" target="blank">{{car?.wikilink}}</a></b></li>
+      <li *ngIf="!car?.wikilink" class="car__site"></li>
+      <li *ngIf="car?.description" class="car__description">{{car?.description}}</li>
+      <li *ngIf="!car?.description" ></li>
     </ul>
   </div>
   <div class="car__controls" *ngIf="!isEdit">
