--- a/src/app/shared-components/car-form/car-form.component.scss
+++ b/src/app/shared-components/car-form/car-form.component.scss
@@ -1,11 +1,11 @@
 form{
   margin: 20px;
   width: 350px;
-  height: 700px;
-  max-height: 770px;
-  .mat-dialog-content{
-    max-height: 80vh;
-  }
+  // height: 650px;
+  // max-height: 770px;
+  // .mat-dialog-content{
+  //   // max-height: 80vh;
+  // }
   .mat-form-field{
     width: 350px; 
     .mat-hint{
