--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -1,16 +1,18 @@
 <mat-card [ngClass]="{'size-lg': isCardLg, 'sizes-sm': !isCardLg}">
   <mat-card-header>
     <mat-card-title [ngClass]="{'title-lg': isCardLg, 'title-sm': !isCardLg}">{{carItem .model}}</mat-card-title>
-    <mat-card-subtitle [ngClass]="{'subtitle-lg': isCardLg, 'subtitle-sm': !isCardLg}" >{{brand || carItem.brand}}</mat-card-subtitle>
-    <mat-icon  [ngClass]="{'icon-lg': isCardLg, 'icon-sm': !isCardLg}" *ngIf="this.carItem.liked"  aria-label="Liked icon">favorite</mat-icon>
+    <mat-card-subtitle [ngClass]="{'subtitle-lg': isCardLg, 'subtitle-sm': !isCardLg}">{{brand || carItem.brand}}
+    </mat-card-subtitle>
+    <mat-icon [ngClass]="{'icon-lg': isCardLg, 'icon-sm': !isCardLg}" *ngIf="this.carItem.liked"
+      aria-label="Liked icon">favorite</mat-icon>
   </mat-card-header>
-  <img [ngClass]="{'img-lg': isCardLg, 'img-sm': !isCardLg}" *ngIf="carItem.image" mat-card-image src="{{carItem .image}}" alt="{{carItem.brand}}">
-  <img [ngClass]="{'img-lg': isCardLg, 'img-sm': !isCardLg}"  *ngIf="!carItem.image"mat-card-image src="../../../assets/images/defoult.jpg" alt="{{carItem.brand}}">
+  <img [ngClass]="{'img-lg': isCardLg, 'img-sm': !isCardLg}" *ngIf="carItem.image" mat-card-image
+    src="{{carItem .image}}" alt="{{carItem.brand}}">
+  <img [ngClass]="{'img-lg': isCardLg, 'img-sm': !isCardLg}" *ngIf="!carItem.image" mat-card-image
+    src="../../../assets/images/defoult.jpg" alt="{{carItem.brand}}">
   <div *ngIf="isCardLg">
-    <button  (click)="like()" class="btn-like" mat-button>Like</button>
-   <a [routerLink]="['/cars', carItem.id]"> <button class="btn-details" mat-button  >
-    Details</button> </a> 
+    <button (click)="like()" class="btn-like" mat-button>Like</button>
+    <a [routerLink]="['/cars', carItem.id]"> <button class="btn-details" mat-button>
+        Details</button> </a>
   </div>
 </mat-card>
-
-
